fix(overflow): fixed article overflow

--- a/assets/_sass/_structure.scss
+++ b/assets/_sass/_structure.scss
@@ -233,10 +233,9 @@
         }
       }
       article {
-        table {
-          display: block;
+
+        > div {
           overflow-x: auto;
-          white-space: nowrap;
         }
 
         iframe {
